--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "raven",
+  "name": "criess",
   "version": "4.0.0",
-  "description": "Raven sunucusu için yapılan gelişmiş özel oda sistemli bot altyapısı.",
+  "description": "Criess için yapılan özel bir davet botu.
+",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "keywords": [],
-  "author": "Ly3ssia",
+  "author": "Criess",
   "license": "MIT",
   "dependencies": {
     "@discordjs/builders": "^1.0.0",
