--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "criess",
   "version": "4.0.0",
-  "description": "Criess için yapılan özel bir davet botu.
-",
+  "description": "Criess için yapılan özel bir davet botu.",
+
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
